# indexer-geyser-plugin

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: release.yml  test.yml
ci/: cargo-build-test.sh  cargo-install-all.sh  create-tarball.sh  env.sh
crates/plugin/: Cargo.toml
crates/plugin/src/: config.rs  plugin.rs  selectors.rs  sender.rs
crates/rabbitmq/: Cargo.toml
crates/rabbitmq/src/: http_indexer.rs  queue_type.rs  search_indexer.rs
