[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-lite]
inherits = "dev"
incremental = false
opt-level = 0
debug = 1
lto = "off"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
# strip = "symbols" # Not supported in the workspace toolchain version

[patch.crates-io]
solana-transaction-status = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
solana-sdk = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
solana-geyser-plugin-interface = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
solana-logger = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
solana-program = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
solana-metrics = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
solana-zk-token-sdk = { git = "https://github.com/step-finance/solana.git", branch = "step-plugin-1.17.15-triton" }
